--- a/src/Resources/views/Locale/_domains.html.twig
+++ b/src/Resources/views/Locale/_domains.html.twig
@@ -14,19 +14,27 @@
         </div>
     </div>
     <div class="ui middle aligned list">
+        <div class="item">
+            <i class="icon folder"></i>
+            <div class="content">
+                <div class="header">
+                    <a href="{{ path('yaroslavche_sylius_translation_plugin_dashboard') }}">..</a>
+                </div>
+            </div>
+        </div>
         {% for domain in localeMessageCatalogue.getDomains() %}
-            {% set totalMessagesCount = fullMessageCatalogue.all(domain) | length %}
-            {% set translatedMessagesCount = localeMessageCatalogue.all(domain) | length %}
-            {% set untranslatedMessagesCount = totalMessagesCount - translatedMessagesCount %}
-            {% set domainTranslationProgress = (translatedMessagesCount / totalMessagesCount) * 100 %}
+            {#{% set totalMessagesCount = fullMessageCatalogue.all(domain) | length %}#}
+            {#{% set translatedMessagesCount = localeMessageCatalogue.all(domain) | length %}#}
+            {#{% set untranslatedMessagesCount = totalMessagesCount - translatedMessagesCount %}#}
+            {#{% set domainTranslationProgress = (translatedMessagesCount / totalMessagesCount) * 100 %}#}
             <div class="item">
                 <i class="icon folder{% if selectedDomain is same as(domain) %} open teal{% endif %}"></i>
                 <div class="content">
                     <div class="header">
                         <a href="{{ path('yaroslavche_sylius_translation_plugin_locale', {'localeCode': currentLocale.code, 'domain': domain}) }}">{{ domain }}</a>
                     </div>
-                    <div class="description">Total: {{ totalMessagesCount }},
-                        Translated: {{ translatedMessagesCount }} ({{ '%.2f' | format(domainTranslationProgress) }}%)</div>
+                    {#<div class="description">Total: {{ totalMessagesCount }},#}
+                        {#Translated: {{ translatedMessagesCount }} ({{ '%.2f' | format(domainTranslationProgress) }}%)</div>#}
                 </div>
             </div>
         {% endfor %}
