--- a/src/Resources/views/_stylesheets.html.twig
+++ b/src/Resources/views/_stylesheets.html.twig
@@ -1,5 +1,8 @@
 <link rel="stylesheet" href="{{ asset('bundles/yaroslavchesyliustranslationplugin/css/translation.css') }}">
 <style>
+    .hidden {
+        display: none !important;
+    }
     .ui-alert-content {
         position: fixed;
         width: 360px;
