--- a/src/Resources/views/base.html.twig
+++ b/src/Resources/views/base.html.twig
@@ -18,4 +18,6 @@
     {{ sonata_block_render_event('sylius.admin.layout.javascripts') }}
 {% endblock %}
 
-{% block content %}{% endblock %}
+{% block content %}
+<div id="yaroslavche-sylius-translation-plugin"></div>
+{% endblock %}
